@@ -10,12 +10,31 @@ class SchemaTestSqlserver < ActiveRecord::TestCase
     @connection.instance_eval { unqualify_table_schema(table_name) }
   end  
   
+  context 'When table is dbo schema' do
+  
+    should 'find primary key for tables with odd schema' do
+      assert_equal 'legacy_id', @connection.primary_key('natural_pk_data')
+      assert SqlServerNaturalPkData.columns_hash['legacy_id'].primary
+    end
+  
+  end
+  
   context 'When table is in non-dbo schema' do
+    
+    should 'work with #table_exists?' do
+      assert @connection.tables_in_schema('test').include?('sql_server_schema_natural_id')
+      assert @connection.table_exists?('test.sql_server_schema_natural_id')
+    end
+    
+    should 'find primary key for tables with odd schema' do
+      assert_equal 'legacy_id', @connection.primary_key('test.sql_server_schema_natural_id')
+      assert SqlServerNaturalPkDataSchema.columns_hash['legacy_id'].primary
+    end
     
     should "have only one identity column" do
       columns = @connection.columns("test.sql_server_schema_identity")
       assert_equal 2, columns.size 
-      assert_equal 1, columns.select{|column| column.is_identity? }.size
+      assert_equal 1, columns.select{ |c| c.primary }.size
     end                                   
     
     should "read only column properties for table in specific schema" do
@@ -25,9 +44,9 @@ class SchemaTestSqlserver < ActiveRecord::TestCase
       assert_equal 7, test_columns.size    
       assert_equal 2, dbo_columns.size
       assert_equal 2, columns.size
-      assert_equal 1, test_columns.select{|column| column.is_identity? }.size             
-      assert_equal 1, dbo_columns.select{|column| column.is_identity? }.size             
-      assert_equal 1, columns.select{|column| column.is_identity? }.size                 
+      assert_equal 1, test_columns.select{ |c| c.primary }.size
+      assert_equal 1, dbo_columns.select{ |c| c.primary }.size
+      assert_equal 1, columns.select{ |c| c.primary }.size
     end  
     
     should "return schema name in all cases" do                                 
@@ -47,6 +66,7 @@ class SchemaTestSqlserver < ActiveRecord::TestCase
     end
                     
   end
-          
+  
+  
 end
 
