@@ -71,13 +71,22 @@ ActiveRecord::Schema.define do
     t.column :tinyint, :tinyint
     t.column :guid, :uniqueidentifier
   end
+  execute %|ALTER TABLE [sql_server_edge_schemas] ADD [guid_newid] uniqueidentifier DEFAULT NEWID();|
+  execute %|ALTER TABLE [sql_server_edge_schemas] ADD [guid_newseqid] uniqueidentifier DEFAULT NEWSEQUENTIALID();| unless sqlserver_azure?
   
   create_table :no_pk_data, :force => true, :id => false do |t|
     t.string :name
   end
   
-  execute %|ALTER TABLE [sql_server_edge_schemas] ADD [guid_newid] uniqueidentifier DEFAULT NEWID();|
-  execute %|ALTER TABLE [sql_server_edge_schemas] ADD [guid_newseqid] uniqueidentifier DEFAULT NEWSEQUENTIALID();| unless sqlserver_azure?
+  execute "IF EXISTS(SELECT * FROM INFORMATION_SCHEMA.TABLES WHERE TABLE_NAME = 'natural_pk_data') DROP TABLE natural_pk_data"
+  execute <<-NATURALPKTABLESQL
+    CREATE TABLE natural_pk_data(
+    	parent_id int,
+    	name nvarchar(255),
+    	description nvarchar(1000),
+    	legacy_id nvarchar(10) NOT NULL PRIMARY KEY,
+    )
+  NATURALPKTABLESQL
   
   create_table 'quoted-table', :force => true do |t|
   end
@@ -110,9 +119,11 @@ ActiveRecord::Schema.define do
 
 
   # Another schema.
+  
   create_table :sql_server_schema_columns, :force => true do |t|
     t.column :field1 , :integer
   end
+  
   execute "IF NOT EXISTS(SELECT * FROM sys.schemas WHERE name = 'test') EXEC sp_executesql N'CREATE SCHEMA test'"
   execute "IF EXISTS(SELECT * FROM INFORMATION_SCHEMA.TABLES WHERE TABLE_NAME = 'sql_server_schema_columns' and TABLE_SCHEMA = 'test') DROP TABLE test.sql_server_schema_columns"
   execute <<-SIMILIARTABLEINOTHERSCHEMA
@@ -126,6 +137,7 @@ ActiveRecord::Schema.define do
     	n_description nvarchar(1000)
     )
   SIMILIARTABLEINOTHERSCHEMA
+  
   execute "IF EXISTS(SELECT * FROM INFORMATION_SCHEMA.TABLES WHERE TABLE_NAME = 'sql_server_schema_identity' and TABLE_SCHEMA = 'test') DROP TABLE test.sql_server_schema_identity"
   execute <<-SIMILIARTABLEINOTHERSCHEMA
     CREATE TABLE test.sql_server_schema_identity(
@@ -133,6 +145,16 @@ ActiveRecord::Schema.define do
     	filed_1 int
     )
   SIMILIARTABLEINOTHERSCHEMA
+  
+  execute "IF EXISTS(SELECT * FROM INFORMATION_SCHEMA.TABLES WHERE TABLE_NAME = 'sql_server_schema_natural_id' and TABLE_SCHEMA = 'test') DROP TABLE test.sql_server_schema_natural_id"
+  execute <<-NATURALPKTABLESQLINOTHERSCHEMA
+    CREATE TABLE test.sql_server_schema_natural_id(
+    	parent_id int,
+    	name nvarchar(255),
+    	description nvarchar(1000),
+    	legacy_id nvarchar(10) NOT NULL PRIMARY KEY,
+    )
+  NATURALPKTABLESQLINOTHERSCHEMA
   
   
   # Azure needs clustered indexes
